# fabric-compiler

./: .dockerignore  .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  fab-language.yml  language-brain.yml  security_gates.yml
brains/language/: model.yaml
brains/language/compiler/atomize/: bounds.ts
brains/language/compiler/backend/: harden_lowering_pass.cc
brains/language/compiler/compiler/: .gitignore  CMakeLists.txt  Dockerfile  build_fabric.bat  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
brains/language/compiler/compiler/backend/llvm/: CMakeLists.txt  llvm_codegen.cpp
brains/language/compiler/compiler/backend/qasm/: CMakeLists.txt  qasm_emitter.cpp
brains/language/compiler/compiler/backend/quil/: CMakeLists.txt  quil_emitter.cpp
brains/language/compiler/compiler/backend/wasm/: CMakeLists.txt  wasm_codegen.cpp
brains/language/compiler/compiler/codegen/: ir.ts
brains/language/compiler/compiler/frontend/: ast.d.ts  ast.js  ast.js.map  ast.ts  ast_types.ts  atomizer.ts  builder_stubs.ts  checker.d.ts  checker.js  checker.js.map  checker.ts  errors.ts  grammar.ne  grammar.pegjs  grammar.ts  grammar_parser.ts  parser.js  parser.js.map  parser.ts  version_map.ts
brains/language/compiler/compiler/frontend/polyglot/: go.ne  javascript.ne  python.ne
brains/language/compiler/compiler/include/: FabricOps.h
brains/language/compiler/compiler/ir/: classical_ir.mlir  qir.mlir
brains/language/compiler/compiler/lib/: FabricOps.cpp  index.d.ts  index.js  index.js.map
brains/language/compiler/compiler/lib/backend/: emitter.d.ts  emitter.js  emitter.js.map  generator.d.ts  generator.js  generator.js.map
brains/language/compiler/compiler/lib/frontend/: ast.d.ts  ast.js.map  ast_types.d.ts  ast_types.js  ast_types.js.map  atomizer.d.ts  atomizer.js  atomizer.js.map  builder_stubs.d.ts  builder_stubs.js  builder_stubs.js.map  checker.d.ts  checker.js  checker.js.map  errors.d.ts  errors.js  errors.js.map  grammar.d.ts  grammar.js  grammar.js.map  grammar_parser.d.ts  grammar_parser.js  grammar_parser.js.map  parser.d.ts  parser.js  parser.js.map  version_map.d.ts  version_map.js  version_map.js.map
brains/language/compiler/compiler/lib/ir/: compiler.d.ts  compiler.js  compiler.js.map  lowering.d.ts  lowering.js  lowering.js.map
brains/language/compiler/compiler/runtime/: profile_enforcer.ts
brains/language/compiler/compiler/src/: build.ts  index.ts
brains/language/compiler/compiler/src/backend/: emitter.ts  generator.ts
brains/language/compiler/compiler/src/ir/: compiler.ts  lowering.ts  schema.ts
brains/language/compiler/frontend/: ast_sanitize.ts  hardening_hook.ts
brains/language/proto/: language.proto
docker/: language-brain.Dockerfile
economy/contracts/: DaoTimelockMultisig.sol  PaymasterHardened.sol  RoyaltyTreasury.sol  XpChain.sol
examples/: bad-flood.fab  bad-unknown-policy.fab  hello.fab
proto/fabric/core/language/v1/: language.proto
runtime/: audit_logger.cpp  policy_kernel.cpp
schemas/: policy.schema.json
scripts/: apply_hardening.ps1
server/: index.js  runner.js  solidityGen.js
tools/: build-all.ps1  fab2ir.cjs  hardened-build.ps1  ir-normalize.ps1
tools/brain-vm/: agentvm.js  package-lock.json  package.json
tools/vsce-fabric/: language-configuration.json  package-lock.json  package.json  tsconfig.json
tools/vsce-fabric/src/: extension.ts
tools/vsce-fabric/syntaxes/: fabric.tmLanguage.json
